--- a/src/Misc/NEWS
+++ b/src/Misc/NEWS
@@ -2,6 +2,54 @@
 Python News
 +++++++++++
 
+What's New in Python 3.10.12 final?
+===================================
+
+*Release date: 2023-06-06*
+
+Security
+--------
+
+- gh-issue-103142: The version of OpenSSL used in our binary builds has been
+  upgraded to 1.1.1u to address several CVEs.
+
+- gh-issue-99889: Fixed a security in flaw in :func:`uu.decode` that could
+  allow for directory traversal based on the input if no ``out_file`` was
+  specified.
+
+- gh-issue-104049: Do not expose the local on-disk location in directory
+  indexes produced by :class:`http.client.SimpleHTTPRequestHandler`.
+
+- gh-issue-102153: :func:`urllib.parse.urlsplit` now strips leading C0
+  control and space characters following the specification for URLs defined
+  by WHATWG in response to CVE-2023-24329. Patch by Illia Volochii.
+
+Library
+-------
+
+- gh-issue-103935: Use :func:`io.open_code` for files to be executed instead
+  of raw :func:`open`
+
+- gh-issue-102953: The extraction methods in :mod:`tarfile`, and
+  :func:`shutil.unpack_archive`, have a new a *filter* argument that allows
+  limiting tar features than may be surprising or dangerous, such as
+  creating files outside the destination directory. See
+  :ref:`tarfile-extraction-filter` for details.
+
+Documentation
+-------------
+
+- gh-issue-89412: Add missing documentation for the ``end_lineno`` and
+  ``end_offset`` attributes of the :class:`traceback.TracebackException`
+  class.
+
+Build
+-----
+
+- gh-issue-103262: Fixes Windows installer build to work with latest
+  compilers.
+
+
 What's New in Python 3.10.11 final?
 ===================================
 
